kubernetes/apps/express-kubernetes-example/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: express-kubernetes-example
  namespace: development
  labels:
    app.kubernetes.io/name: express-kubernetes-example
    app.kubernetes.io/component: server
    app.kubernetes.io/part-of: express-kubernetes-example
    my-company.com/environment: development
    my-company.com/technology: express
    my-company.com/owner: albert
  annotations:
    my-company.com/description: Example of an express service working in Kubernetes
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: express-kubernetes-example
      my-company.com/environment: development
  strategy: {}
  template:
    metadata:
      labels:
        app.kubernetes.io/name: express-kubernetes-example
        app.kubernetes.io/component: server
        app.kubernetes.io/part-of: express-kubernetes-example
        my-company.com/environment: development
        my-company.com/technology: express
        my-company.com/owner: albert
      annotations:
        my-company.com/description: Example of an express service working in Kubernetes
    spec:
      containers:
        - image: express-kubernetes-example:development
          imagePullPolicy: Never
          name: express-kubernetes-example
          ports:
            - containerPort: 3000
              name: http
          resources:
            requests:
              cpu: 200m
              memory: 128Mi
            limits:
              cpu: 256m
              memory: 300Mi
          livenessProbe:
            httpGet:
              path: /api/health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /api/health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
status: {}
