kubernetes/apps/express-kubernetes-example/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: express-kubernetes-example
  namespace: development
  labels:
    app.kubernetes.io/name: express-kubernetes-example
    app.kubernetes.io/component: server
    app.kubernetes.io/part-of: express-kubernetes-example
    environment: development
    technology: express
    service-type: backend
    owner: albert
spec:
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app.kubernetes.io/name: express-kubernetes-example
    environment: development
  type: ClusterIP
status:
  loadBalancer: {}
