kubernetes/apps/express-kubernetes-example/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-express-kubernetes-example
  namespace: development
  labels:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/part-of: express-kubernetes-example
    my-company.com/environment: development
    my-company.com/technology: express
    my-company.com/owner: albert
spec:
  rules:
    - host: my-company.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: express-kubernetes-example
                port:
                  number: 3000
  ingressClassName: nginx
